pepare ya the way of the 180.29
git-svn-id: svn://svn.debian.org/svn/pkg-nvidia/packages/nvidia-graphics-drivers/trunk@531 b6a4b1ba-b714-0410-8a2d-fc0b36c6496e

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,17 @@
+nvidia-graphics-drivers (180.29-1) unstable; urgency=low
+
+  [ Harald Dunkel ]
+  * new upstream 
+  * add shlibs information for libvdpau
+  * add 32bit libraries for vdpau
+  * remove debian/temp during cleanup
+	  
+  [ Randall Donald ]
+  * Add vdpau.so links (closes: #513765) 
+  * Yay Lenny released. Now upload to unstable (closes: #514788)
+
+ -- Randall Donald <rdonald@debian.org>  Thu, 19 Jan 2009 12:09:26 -0800
+ 
 nvidia-graphics-drivers (180.22-2) experimental; urgency=low
 
   * Add VDPAU stuff (closes: #511524) 
