--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+nvidia-graphics-drivers (180.44-2) unstable; urgency=low
+
+  * Fix the dh_clean issue that just showed up now for some reason
+    and freaked everyone out. (closes: #523716, #523757, #523764)
+
+ -- Randall Donald <rdonald@debian.org>  Sun, 12 Apr 2009 15:11:36 -0700
+
 nvidia-graphics-drivers (180.44-1) unstable; urgency=low
   
   [ Randall Donald ]
