--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,14 @@
+nvidia-graphics-drivers (185.18.14-1) unstable; urgency=low
+
+  [ Randall Donald ]
+  * New upstream: (closes: #532568)
+  
+  [ Harald Dunkel ]
+  * create empty patches.h
+  * new nvidia-libvdpau, nvidia-libvdpau-ia32, nvidia-libvdpau-dev: (closes: #519792)
+
+ -- Randall Donald <rdonald@debian.org>  Wed, 10 Jun 2009 15:35:55 -0700
+
 nvidia-graphics-drivers (180.44-2) unstable; urgency=low
 
   * Fix the dh_clean issue that just showed up now for some reason
