first release maybe
git-svn-id: svn://svn.debian.org/svn/pkg-nvidia/packages/nvidia-graphics-drivers/trunk@558 b6a4b1ba-b714-0410-8a2d-fc0b36c6496e

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,7 +1,8 @@
 nvidia-graphics-drivers (185.18.14-1) unstable; urgency=low
 
   [ Randall Donald ]
-  * New upstream: (closes: #532568)
+  * New upstream: (closes: #532568, #532568, #532774)
+  * still only builds via module-assistant
   
   [ Harald Dunkel ]
   * create empty patches.h
