--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+nvidia-graphics-drivers (185.18.36-2) unstable; urgency=low
+
+  * Add 2.6.31 support in conftest.h (closes: #540663) 
+
+ -- Randall Donald <rdonald@debian.org>  Thu, 03 Sep 2009 16:50:48 -0700
+
 nvidia-graphics-drivers (185.18.36-1) unstable; urgency=low
 
   * New Upstream (closes: #542889, #543155)
