--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+nvidia-graphics-drivers (190.42-1) UNRELEASED; urgency=low
+
+  * New Upstream (closes: #555739,#555297,#555298)
+  * change section of kernel module to non-free/kernel 
+
+ -- Randall Donald <rdonald@debian.org>  Wed, 11 Nov 2009 13:13:28 -0800
+
 nvidia-graphics-drivers (185.18.36-2) unstable; urgency=low
 
   * Add 2.6.31 support in conftest.h (closes: #540663) 
