--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+nvidia-graphics-drivers (190.42-4) unstable; urgency=low
+
+  * Fix issue with upgrading from 190.42-2. (Closes: #558369)
+
+ -- Andres Mejia <mcitadel@gmail.com>  Sat, 28 Nov 2009 20:08:12 -0500
+
 nvidia-graphics-drivers (190.42-3) unstable; urgency=low
 
   [ Andres Mejia ]
