--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+nvidia-graphics-drivers (190.53-1) unstable; urgency=low
+
+  * New upstream. (closes: #563022)
+  * Add new vdpau directory structure
+
+ -- Randall Donald <rdonald@debian.org>  Sat, 16 Jan 2010 10:59:16 -0800
+
 nvidia-graphics-drivers (190.42-4) unstable; urgency=low
 
   * Fix issue with upgrading from 190.42-2. (Closes: #558369)
