--- a/debian/changelog
+++ b/debian/changelog
@@ -1,8 +1,13 @@
 nvidia-graphics-drivers (190.53-2) UNRELEASED; urgency=low
 
+  [ Randall Donald ]
   * Fix libvdpau_nvidia.so symlink (closes: #566518)
 
- -- Randall Donald <rdonald@debian.org>  Mon, 25 Jan 2010 14:05:40 -0800
+  [ Andres Mejia ]
+  * Fix dependencies for nvidia-libvdpau1 and nvidia-libvdpau1-ia32.
+  * Ensure NVIDIA driver packages are in source tree before attempting to build.
+
+ -- Randall Donald <rdonald@debian.org>  Thu, 28 Jan 2010 12:14:18 -0500
 
 nvidia-graphics-drivers (190.53-1) unstable; urgency=low
 
