--- a/debian/changelog
+++ b/debian/changelog
@@ -8,6 +8,7 @@ nvidia-graphics-drivers (190.53-2) UNRELEASED; urgency=low
   * Ensure NVIDIA driver packages are in source tree before attempting to build.
   * Fix deprecated use of '<' to '<<' in package relationships.
   * Start using the most recent debhelper compat version.
+  * Bump Standards-Version to 3.8.3.
 
  -- Randall Donald <rdonald@debian.org>  Thu, 28 Jan 2010 12:14:18 -0500
 
