--- a/debian/changelog
+++ b/debian/changelog
@@ -9,6 +9,7 @@ nvidia-graphics-drivers (190.53-2) UNRELEASED; urgency=low
   * Fix deprecated use of '<' to '<<' in package relationships.
   * Start using the most recent debhelper compat version.
   * Bump Standards-Version to 3.8.3.
+  * Use dh_prep instead of dh_clean -k.
 
  -- Randall Donald <rdonald@debian.org>  Thu, 28 Jan 2010 12:14:18 -0500
 
