--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+nvidia-graphics-drivers (190.53-3) UNRELEASED; urgency=low
+
+  [ Andres Mejia ]
+  * Fix weak library dependency of dev packages.
+
+ -- Randall Donald <rdonald@debian.org>  Mon, 01 Feb 2010 19:36:17 -0500
+
 nvidia-graphics-drivers (190.53-2) unstable; urgency=low
 
   [ Randall Donald ]
