--- a/debian/changelog
+++ b/debian/changelog
@@ -2,6 +2,7 @@ nvidia-graphics-drivers (190.53-3) UNRELEASED; urgency=low
 
   [ Andres Mejia ]
   * Fix weak library dependency of dev packages.
+  * Bump Standards-Version to 3.8.4.
 
  -- Randall Donald <rdonald@debian.org>  Mon, 01 Feb 2010 19:36:17 -0500
 
