--- a/debian/changelog
+++ b/debian/changelog
@@ -11,6 +11,12 @@ nvidia-graphics-drivers (190.53-3) UNRELEASED; urgency=low
     package.
   * Add myself to Uploaders field in answer to bug #568952.
 
+  [ Russ Allbery ]
+  * Do not run configure under $(ROOT_CMD) in kdist_config.  kdist_build
+    already runs that target under $(ROOT_CMD), so this provokes errors
+    from fakeroot about nesting invocations.  Nothing this target does
+    requires fakeroot.  Thanks, Bastian Kleineidam.  (Closes:  #416594)
+
  -- Andres Mejia <mcitadel@gmail.com>  Thu, 18 Mar 2010 18:44:40 -0400
 
 nvidia-graphics-drivers (190.53-2) unstable; urgency=low
