--- a/debian/changelog
+++ b/debian/changelog
@@ -52,6 +52,7 @@ nvidia-graphics-drivers (190.53-3) UNRELEASED; urgency=low
   * nvidia-kernel-source: switch patch system from dpatch to quilt
   * debian.binary/patches/fix-2.6.33-build.patch: new patch to fix module
     build with kernel 2.6.33 (closes: #573251)
+  * improve handling of generated files (closes: #533518)
 
  -- Andres Mejia <mcitadel@gmail.com>  Thu, 18 Mar 2010 18:44:40 -0400
 
