Stop stripping the binaries; we're not allowed to
* Stop stripping the binaries.  The NVIDIA license does not allow us to
  modify the binaries in any way.


git-svn-id: svn://svn.debian.org/svn/pkg-nvidia/packages/nvidia-graphics-drivers/trunk@770 b6a4b1ba-b714-0410-8a2d-fc0b36c6496e

--- a/debian/changelog
+++ b/debian/changelog
@@ -25,6 +25,8 @@ nvidia-graphics-drivers (190.53-3) UNRELEASED; urgency=low
     may have gotten far enough to create them.
   * Document the nvidia-glx postrm cases and rationale in more detail in
     comments in the postrm.  Thanks, Sven Joachim.  (Closes: #575272)
+  * Stop stripping the binaries.  The NVIDIA license does not allow us to
+    modify the binaries in any way.
 
   [ Andreas Beckmann ]
   * Add Enhances: lib[32]vdpau1 to nvidia-vdpau-driver[-ia32].
