Force source format 1.0
* Force source format 1.0.  The interaction of the packaging and the
  upstream source is way too complicated to figure out how to move to
  3.0 (quilt) at this point.


git-svn-id: svn://svn.debian.org/svn/pkg-nvidia/packages/nvidia-graphics-drivers/trunk@774 b6a4b1ba-b714-0410-8a2d-fc0b36c6496e

--- a/debian/changelog
+++ b/debian/changelog
@@ -33,6 +33,9 @@ nvidia-graphics-drivers (190.53-3) UNRELEASED; urgency=low
     and that only in binary package stanzas.  Instead, generate an
     ${nvidia:Version} substvar with that value and use that substvar in
     debian/control.
+  * Force source format 1.0.  The interaction of the packaging and the
+    upstream source is way too complicated to figure out how to move to
+    3.0 (quilt) at this point.
 
   [ Andreas Beckmann ]
   * Add Enhances: lib[32]vdpau1 to nvidia-vdpau-driver[-ia32].
