Add a preliminary README.source file
* Add a preliminary README.source explaining how to import new upstream
  versions and build the package for upload.


git-svn-id: svn://svn.debian.org/svn/pkg-nvidia/packages/nvidia-graphics-drivers/trunk@775 b6a4b1ba-b714-0410-8a2d-fc0b36c6496e

--- a/debian/changelog
+++ b/debian/changelog
@@ -36,6 +36,8 @@ nvidia-graphics-drivers (190.53-3) UNRELEASED; urgency=low
   * Force source format 1.0.  The interaction of the packaging and the
     upstream source is way too complicated to figure out how to move to
     3.0 (quilt) at this point.
+  * Add a preliminary README.source explaining how to import new upstream
+    versions and build the package for upload.
 
   [ Andreas Beckmann ]
   * Add Enhances: lib[32]vdpau1 to nvidia-vdpau-driver[-ia32].
