--- a/debian/changelog
+++ b/debian/changelog
@@ -38,6 +38,8 @@ nvidia-graphics-drivers (190.53-3) UNRELEASED; urgency=low
     3.0 (quilt) at this point.
   * Add a preliminary README.source explaining how to import new upstream
     versions and build the package for upload.
+  * Add an explanation for the non-free placement of this package to
+    debian/copyright as requested by Policy 12.5.
 
   [ Andreas Beckmann ]
   * Add Enhances: lib[32]vdpau1 to nvidia-vdpau-driver[-ia32].
