Add myself to Uploaders
git-svn-id: svn://svn.debian.org/svn/pkg-nvidia/packages/nvidia-graphics-drivers/trunk@777 b6a4b1ba-b714-0410-8a2d-fc0b36c6496e

--- a/debian/changelog
+++ b/debian/changelog
@@ -40,6 +40,7 @@ nvidia-graphics-drivers (190.53-3) UNRELEASED; urgency=low
     versions and build the package for upload.
   * Add an explanation for the non-free placement of this package to
     debian/copyright as requested by Policy 12.5.
+  * Add myself to Uploaders.
 
   [ Andreas Beckmann ]
   * Add Enhances: lib[32]vdpau1 to nvidia-vdpau-driver[-ia32].
