--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-nvidia-graphics-drivers (190.53-3) UNRELEASED; urgency=low
+nvidia-graphics-drivers (190.53-3) unstable; urgency=high
 
   [ Andres Mejia ]
   * Fix weak library dependency of dev packages.
@@ -12,6 +12,8 @@ nvidia-graphics-drivers (190.53-3) UNRELEASED; urgency=low
   * Add myself to Uploaders field in answer to bug #568952.
 
   [ Russ Allbery ]
+  * Set urgency to high for RC bug fixes.  The version currently in
+    testing is not usable with the X server in testing.
   * Do not run configure under $(ROOT_CMD) in kdist_config.  kdist_build
     already runs that target under $(ROOT_CMD), so this provokes errors
     from fakeroot about nesting invocations.  Nothing this target does
@@ -72,7 +74,7 @@ nvidia-graphics-drivers (190.53-3) UNRELEASED; urgency=low
   * Add more bug numbers to old changelog entries.
   * Add missing changelog entry about ia32 transition to 185.18.14-2.
 
- -- Andres Mejia <mcitadel@gmail.com>  Thu, 18 Mar 2010 18:44:40 -0400
+ -- Russ Allbery <rra@debian.org>  Thu, 08 Apr 2010 18:13:48 -0700
 
 nvidia-graphics-drivers (190.53-2) unstable; urgency=low
 
