--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+nvidia-graphics-drivers (190.53-4) UNRELEASED; urgency=low
+
+  * Remove empty postrm from generated module packages.
+
+ -- Russ Allbery <rra@debian.org>  Fri, 09 Apr 2010 01:11:41 -0700
+
 nvidia-graphics-drivers (190.53-3) unstable; urgency=high
 
   [ Andres Mejia ]
