--- a/debian/changelog
+++ b/debian/changelog
@@ -1,5 +1,8 @@
 nvidia-graphics-drivers (190.53-4) UNRELEASED; urgency=low
 
+  * Remove postinst for generated module packages.  This script used to
+    set up the NVIDIA device files in /dev, but this is now handled by
+    nvidia-kernel-common.
   * Remove empty postrm from generated module packages.
 
  -- Russ Allbery <rra@debian.org>  Fri, 09 Apr 2010 01:11:41 -0700
