--- a/debian/changelog
+++ b/debian/changelog
@@ -6,6 +6,9 @@ nvidia-graphics-drivers (190.53-4) UNRELEASED; urgency=low
   * Remove empty postrm from generated module packages.
   * Tell update-rc.d to only start the nvidia-glx script and not create
     stop links, matching the LSB script header.
+  * Make nvidia-kernel-source depend on module-assistant.  At least for
+    right now, it uses the make fragments provided by module-assistant to
+    implement required rules for the module building interface.
 
  -- Russ Allbery <rra@debian.org>  Fri, 09 Apr 2010 01:11:41 -0700
 
