Add some additional necessary nvidia-glx Lintian overrides
* Add some additional Lintian overrides for nvidia-glx for the weirdness
  we need to partly replace the free libGL libraries.


git-svn-id: svn://svn.debian.org/svn/pkg-nvidia/packages/nvidia-graphics-drivers/trunk@809 b6a4b1ba-b714-0410-8a2d-fc0b36c6496e

--- a/debian/changelog
+++ b/debian/changelog
@@ -19,6 +19,8 @@ nvidia-graphics-drivers (190.53-4) UNRELEASED; urgency=low
     This allows us to use static Lintian override files and stop
     substituting version numbers into them in debian/rules, simplifying
     the build process.
+  * Add some additional Lintian overrides for nvidia-glx for the weirdness
+    we need to partly replace the free libGL libraries.
 
  -- Russ Allbery <rra@debian.org>  Fri, 09 Apr 2010 01:11:41 -0700
 
