--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,17 @@
+nvidia-graphics-drivers (190.53-5) UNRELEASED; urgency=low
+
+  * Replace control.template for the module build with the version from
+    nvidia-graphics-modules-i386 190.53+1.
+    - Tighten dependency on nvidia-kernel-common.
+    - Set maintainer to the maintenance team, move Randall to uploaders,
+      and add myself.
+    - Update to debhelper 7.
+    - Update standards version to 3.8.4.
+    - Add Homepage.
+    - Improve long description.
+
+ -- Russ Allbery <rra@debian.org>  Sat, 24 Apr 2010 20:35:20 -0700
+
 nvidia-graphics-drivers (190.53-4) unstable; urgency=high
 
   * Set urgency to high for RC bug fixes.
