Drop old dependencies and relationships satisfied in lenny
[ Andreas Beckmann ]
* debian/control:
  - drop versioned Depends/Build-Depends satisfied in lenny
  - drop Conflicts/Replaces for packages existing before lenny only


git-svn-id: svn://svn.debian.org/svn/pkg-nvidia/packages/nvidia-graphics-drivers/trunk@817 b6a4b1ba-b714-0410-8a2d-fc0b36c6496e

--- a/debian/changelog
+++ b/debian/changelog
@@ -19,7 +19,10 @@ nvidia-graphics-drivers (190.53-5) UNRELEASED; urgency=low
   * nvidia-kernel-source: bump debhelper dependency to 7 to match module
     packaging templates
   * merge debian.binary/copyright with debian/copyright.in
-  
+  * debian/control:
+    - drop versioned Depends/Build-Depends satisfied in lenny
+    - drop Conflicts/Replaces for packages existing before lenny only
+
  -- Russ Allbery <rra@debian.org>  Sat, 24 Apr 2010 20:35:20 -0700
 
 nvidia-graphics-drivers (190.53-4) unstable; urgency=high
