--- a/debian/changelog
+++ b/debian/changelog
@@ -22,6 +22,13 @@ nvidia-graphics-drivers (190.53-5) UNRELEASED; urgency=low
   * debian/control:
     - drop versioned Depends/Build-Depends satisfied in lenny
     - drop Conflicts/Replaces for packages existing before lenny only
+  * TLS cleanup: Debian only ships TLS enabled 2.6 kernels, so remove all
+    dynamic TLS checking and symlink updating code
+    - nvidia-glx.README.Debian: don't talk about TLS any longer
+    - debian/nvidia-glx.init: remove (inactive) tls symlink adjusting code
+    - debian/nvidia-glx.default: remove, no longer needed
+    - nvidia-glx.postinst: remove /etc/default/nvidia-glx on upgrades
+    - stop shipping /usr/lib/nvidia/tls_test*
 
  -- Russ Allbery <rra@debian.org>  Sat, 24 Apr 2010 20:35:20 -0700
 
