--- a/debian/changelog
+++ b/debian/changelog
@@ -29,6 +29,10 @@ nvidia-graphics-drivers (190.53-5) UNRELEASED; urgency=low
     - debian/nvidia-glx.default: remove, no longer needed
     - nvidia-glx.postinst: remove /etc/default/nvidia-glx on upgrades
     - stop shipping /usr/lib/nvidia/tls_test*
+  * debian/nvidia-glx.bug-script: new bug script that reports a bit of useful
+    version and hardware information
+  * debian/control: bump debhelper B-D to (>= 7.2.3~) for dh_bugfiles
+  * debian/rules: use dh_bugfiles to install bug script
 
  -- Russ Allbery <rra@debian.org>  Sat, 24 Apr 2010 20:35:20 -0700
 
