--- a/debian/changelog
+++ b/debian/changelog
@@ -39,6 +39,8 @@ nvidia-graphics-drivers (190.53-5) UNRELEASED; urgency=low
     scheme.)
   * debian/*.in: replace #DIRNAME# with NVIDIA-Linux and rename *.in to * if
     this was the only substitution
+  * patches/*, patches.save/*, patches.dpatch.save/*: remove, long obsolete
+  * debian/rules: remove obsolete code
 
  -- Russ Allbery <rra@debian.org>  Sat, 24 Apr 2010 20:35:20 -0700
 
