Simplify the script that generates upstream variables
[ Andreas Beckmann ]
* debian/upstream_info, debian/rules: simplify
  - add URL_X86 and URL_X86_64, include both URLs in debian/copyright
  - drop unused variables BASE_VERSION, FILENAME, DIRNAME, URL, RELEASE,
    UPSTREAMVERSION, NEXTVER


git-svn-id: svn://svn.debian.org/svn/pkg-nvidia/packages/nvidia-graphics-drivers/trunk@822 b6a4b1ba-b714-0410-8a2d-fc0b36c6496e

--- a/debian/changelog
+++ b/debian/changelog
@@ -41,6 +41,10 @@ nvidia-graphics-drivers (190.53-5) UNRELEASED; urgency=low
     this was the only substitution
   * patches/*, patches.save/*, patches.dpatch.save/*: remove, long obsolete
   * debian/rules: remove obsolete code
+  * debian/upstream_info, debian/rules: simplify
+    - add URL_X86 and URL_X86_64, include both URLs in debian/copyright
+    - drop unused variables BASE_VERSION, FILENAME, DIRNAME, URL, RELEASE,
+      UPSTREAMVERSION, NEXTVER
 
  -- Russ Allbery <rra@debian.org>  Sat, 24 Apr 2010 20:35:20 -0700
 
