--- a/debian/changelog
+++ b/debian/changelog
@@ -45,6 +45,9 @@ nvidia-graphics-drivers (190.53-5) UNRELEASED; urgency=low
     - add URL_X86 and URL_X86_64, include both URLs in debian/copyright
     - drop unused variables BASE_VERSION, FILENAME, DIRNAME, URL, RELEASE,
       UPSTREAMVERSION, NEXTVER
+  * conftest.h: implement conftest.sh function acpi_walk_namespace (new in
+    195.xx), acpi_walk_namespace is available since 2.4.0 (checked with lxr)
+  * conftest.h: reorder and make INIT_WORK implementation more complete
 
  -- Russ Allbery <rra@debian.org>  Sat, 24 Apr 2010 20:35:20 -0700
 
